--- a/slides-colab.Rmd
+++ b/slides-colab.Rmd
@@ -14,7 +14,7 @@ output:
     - css/icones-fa.css
     - css/metropolis.css
     - css/customize-slides.css
-    - custom.css
+    - css/custom.css
     includes:
       after_body: insert-logo.html
     lib_dir: libs
@@ -28,6 +28,8 @@ output:
 
 ```{r setup, include=FALSE}
 options(htmltools.dir.version = FALSE)
+dir.create(here::here('ateliers/css'))
+file.copy(here::here('css'), here::here('ateliers/css'), recursive = TRUE)
 ```
 
 .sauterligne3[
