--- a/ateliers/index.Rmd
+++ b/ateliers/index.Rmd
@@ -9,13 +9,13 @@ output:
     new_session: yes
     self_contained: false
     css:
-    - ../css/default.css
-    - ../css/default-fonts.css
-    - ../css/style-utilitr.css
-    - ../css/icones-fa.css
-    - ../css/metropolis.css
-    - ../css/customize-slides.css
-    - ../custom.css
+    - css/default.css
+    - css/default-fonts.css
+    - css/style-utilitr.css
+    - css/icones-fa.css
+    - css/metropolis.css
+    - css/customize-slides.css
+    - css/custom.css
     includes:
       after_body: ../insert-logo.html
     lib_dir: libs
@@ -29,4 +29,4 @@ output:
 ---
 ### Liste des ressources disponibles
 
-* Atelier [data.table](./datatable.html)
+* [Présentation data.table](./datatable.html) (script uniquement [ici](./datatable.R))
