--- a/ateliers/datatable.Rmd
+++ b/ateliers/datatable.Rmd
@@ -160,42 +160,43 @@ dt
 
 Exemple: on veut calculer la moyenne de `y` par groupe défini par `x`, uniquement sur les observations pour lesquelles `x` est supérieur à 3
 
-<div>
-
-<table class='table' style = "width : 70%;">
-<tr> <td>**`Base R`**</td> 
+<div class="inline-table"><table class="table" style="width : 70%;">
+<tr>
 <td>
-```{r, eval=FALSE}
-aggregate(
-  dt[dt[["x"]] > 3]$y,
-  by = list(dt[dt[["x"]] > 3]$z),
-  FUN = sum)
-```
+<strong><code>Base R</code></strong>
+</td>
+<td>
+<div class="sourceCode" id="cb216"><pre class="downlit sourceCode r">
+<code class="sourceCode R"><span class="fu"><a href="https://rdrr.io/r/stats/aggregate.html">aggregate</a></span><span class="op">(</span>
+  <span class="va">dt</span><span class="op">[</span><span class="va">dt</span><span class="op">[[</span><span class="st">"x"</span><span class="op">]</span><span class="op">]</span> <span class="op">&gt;</span> <span class="fl">3</span><span class="op">]</span><span class="op">$</span><span class="va">y</span>,
+  by <span class="op">=</span> <span class="fu"><a href="https://rdrr.io/r/base/list.html">list</a></span><span class="op">(</span><span class="va">dt</span><span class="op">[</span><span class="va">dt</span><span class="op">[[</span><span class="st">"x"</span><span class="op">]</span><span class="op">]</span> <span class="op">&gt;</span> <span class="fl">3</span><span class="op">]</span><span class="op">$</span><span class="va">z</span><span class="op">)</span>,
+  FUN = sum) </code></pre></div>
 </td>
 </tr>
 <tr>
-<td>**`dplyr`**</td> 
 <td>
-```{r, eval=FALSE}
-dt %>%
-  dplyr::filter(x > 3) %>%
-  dplyr::group_by(z) %>%
-  dplyr::summarise(sum(y))
-```
+<strong><code>dplyr</code></strong>
+</td>
+<td>
+<div class="sourceCode" id="cb217"><pre class="downlit sourceCode r">
+<code class="sourceCode R"><span class="va">dt</span> <span class="op">%&gt;%</span>
+  <span class="fu">dplyr</span><span class="fu">::</span><span class="fu"><a href="https://dplyr.tidyverse.org/reference/filter.html">filter</a></span><span class="op">(</span><span class="va">x</span> <span class="op">&gt;</span> <span class="fl">3</span><span class="op">)</span> <span class="op">%&gt;%</span>
+  <span class="fu">dplyr</span><span class="fu">::</span><span class="fu"><a href="https://dplyr.tidyverse.org/reference/group_by.html">group_by</a></span><span class="op">(</span><span class="va">z</span><span class="op">)</span> <span class="op">%&gt;%</span>
+   <span class="fu">dplyr</span><span class="fu">::</span><span class="fu"><a href="https://dplyr.tidyverse.org/reference/summarise.html">summarise</a></span>(sum(y))
+</code></pre></div>
 </td>
 </tr>
 <tr>
-<td>**`data.table`**</td> 
 <td>
-```{r, eval=FALSE}
-
-dt[x > 3, sum(y), by = z]
-```
+<strong><code>data.table</code></strong>
+</td>
+<td>
+<div class="sourceCode" id="cb218"><pre class="downlit sourceCode r">
+<code class="sourceCode R">dt[x > 3, sum(y), by = z]
+</code></pre></div>
 </td>
 </tr>
-</table>
-
-</div>
+</table></div>
 
 ---
 # Manipuler des données avec `data.table`: principe ;
